# yg-corporate-registry-free-data

./: README.md  corporate_entities.csv  pyproject.toml  run.sh
tests/: test_yg_corporate_registry_free_data.py
ycor_scraper/: scrapy.cfg
ycor_scraper/ycor_scraper/: items.py  middlewares.py  pipelines.py  settings.py
ycor_scraper/ycor_scraper/spiders/: entity_spider.py
