[tool.poetry]
name = "yg-corporate-registry-free-data"
version = "0.1.0"
description = ""
authors = ["Lee O'Mara <lee.omara@gov.yk.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
scrapy = "^2.7.1"
csv-diff = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
